# simple-forest-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: character.h  main.cpp  world.h
src/libs/: CMakeLists.txt  character.h  map.h  messages.h  myforest.h  population.h  positions.h  tree.cpp  tree.h  world.cpp  world.h
src/libs/lumberjack/: CMakeLists.txt  lumberjack.cpp  lumberjack.h
src/libs/tree/: CMakeLists.txt  tree.cpp  tree.h
src/libs/world/: CMakeLists.txt  map.h  world.cpp  world.h
tests/: lumberjackT.cpp  mapT.cpp  treeT.cpp  worldT.cpp
